# Robotics-Simulators

./: README.md
install/: local_setup.sh  setup.sh
install/webots_sim/share/webots_sim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/webots_sim/share/webots_sim/cmake/: webots_simConfig.cmake
install/webots_sim/share/webots_sim/controllers/: rosbot_controller.py
install/webots_sim/share/webots_sim/controllers/robile_controller/: robile_controller.py
install/webots_sim/share/webots_sim/controllers/rosbot_controller/: rosbot_controller.py
install/webots_sim/share/webots_sim/launch/: gazebo_4_wheel.launch.py  robile.launch.py
install/webots_sim/share/webots_sim/projects/appearances/protos/: MattePaint.proto
install/webots_sim/share/webots_sim/projects/devices/slamtec/protos/: RpLidarA2.proto
install/webots_sim/share/webots_sim/projects/devices/tdk/protos/: Mpu-9250.proto
install/webots_sim/share/webots_sim/protos/: Rosbot.proto
install/webots_sim/share/webots_sim/worlds/: .null_world.wbproj  .null_world_new.wbproj  null_world.wbt  robile_world.wbt
log/: latest_build  latest_list
robile_gazebo/: CMakeLists.txt  robile.urdf
robile_gazebo/controllers/robile_controller/: robile_controller.py
robile_gazebo/launch/: robile.launch.py
robile_gazebo/worlds/: .null_world.wbproj  null_world.wbt
src/webots_sim/: CMakeLists.txt  package.xml  setup.py
src/webots_sim/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/webots_sim/launch/: robile.launch.py  webots_robile_launch.py
src/webots_sim/log/: latest_build
src/webots_sim/protos/: Robile.proto  Rosbot.proto
(+18 files in other folders)
